<resources>
    <string name="app_name">Social Media App</string>

    <string name="home">Home</string>
    <string name="add">Add Post</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="user">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="create_story">Create Story</string>
    <string name="todo">TODO</string>
    <string name="create_a_story">Create a Story</string>
    <string name="user_name">User Name</string>
    <string name="zulfikaar">Zulfikaar</string>
    <string name="sword_of_ali_raziallahanhu">Sword of Ali RaziAllahAnhu</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="_354">354</string>
    <string name="profile_name">Profile Name</string>
    <string name="about">About</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="posts">Posts</string>
    <string name="_4685">4685</string>
    <string name="_220">220</string>
    <string name="_19">19</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="my_friends">My Friends</string>
    <string name="m_amin_mentioned_you_in_a_comment_m_amin_mentioned_you_in_a_comment">M. Amin mentioned you in a comment.M. Amin mentioned you in a comment.</string>
    <string name="just_now">just now</string>
    <string name="welcome_to_social_world">Welcome To Social World !</string>
    <string name="keep_connected_with_friends">Keep connected with friends</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register!</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="already_have_account">Already have account?</string>
    <string name="register1">register</string>
    <string name="login1">Login!</string>
    <string name="title">title</string>
    <string name="follow">Follow</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="button">Button</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="add_to_your_post">Add to your post</string>
    <string name="textview">TextView</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="comment">Comment</string>
    <string name="notifications">Notifications</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="my_followers">My Followers</string>
    <string name="description">Description</string>

</resources>