<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/post_back"
    android:elevation="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_40mdp"
        android:layout_height="@dimen/_40mdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:src="@drawable/picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <com.devlomi.circularstatusview.CircularStatusView
        android:id="@+id/status_circle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:portion_color="#F67504"
        app:portion_spacing="4dp"
        app:portion_width="2dp"
        app:portions_count="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/zulfikaar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.120000005"
        tools:text="@string/zulfikaar" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:text="@string/zulfikaar" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/postImg"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150mdp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:riv_corner_radius="15dip"
        app:riv_mutate_background="true"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="26dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:srcCompat="@drawable/ic_bookmark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/postDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImg" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/postImg"
        app:layout_constraintTop_toBottomOf="@+id/postDes"
        tools:text="@string/_354" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:drawablePadding="@dimen/_6mdp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/comment"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        tools:text="@string/_50" />

</androidx.constraintlayout.widget.ConstraintLayout>