<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_50mdp"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/picture"
        android:visibility="gone"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.devlomi.circularstatusview.CircularStatusView
        android:id="@+id/status_circle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:portion_color="#F67504"
        app:portion_spacing="4dp"
        app:portion_width="2dp"
        app:portions_count="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        diagonal:layout_constraintBottom_toTopOf="@+id/profession"
        diagonal:layout_constraintStart_toEndOf="@+id/profile_image"
        diagonal:layout_constraintTop_toTopOf="@+id/profile_image"
        diagonal:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/profession"
        android:textSize="12sp"
        android:visibility="gone"
        diagonal:layout_constraintBottom_toBottomOf="@+id/profile_image"
        diagonal:layout_constraintStart_toStartOf="@+id/user_name"
        diagonal:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/followBtn"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/abeezee"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/follow"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        diagonal:layout_constraintBottom_toBottomOf="@+id/profile_image"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintTop_toTopOf="@+id/profile_image"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>